import de fontes

--- a/curriculo/css/style.css
+++ b/curriculo/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Gotham Black";
-    src: url(/fonts/GOTHAM-BLACK.OTF);
+    src: url(../fonts/GOTHAM-BLACK.OTF);
 };
 
 /* Resets */
