--- a/curriculo/css/style.css
+++ b/curriculo/css/style.css
@@ -13,6 +13,7 @@
 html
 {
     scroll-behavior: smooth;
+    
 }
 
 body, h1, h2, h3, h4, p, a
@@ -25,6 +26,10 @@ h1, h2, h3, h4, p, a
 {
     color: white;
     font-family: "Gotham Black", sans-serif;
+}
+
+html, body{
+    overflow-x: hidden;
 }
 
 html
@@ -86,6 +91,7 @@ header
     text-decoration: none;
     scroll-behavior: smooth;
 }
+
 
 /* CTA */
 
@@ -421,24 +427,87 @@ footer a
     #header-container
     {
         display: flex;
-        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         margin: auto;
+    }
+
+    .nav-menu {
+        display: none;
+        transition: all ease-in-out 0.3s;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        text-align: center;
+        top: 9%;
+        right: -100%;
+        width: 100%;
+        height: 100%;
     }
 
     #menu li
     {
-        padding: 20px;
+        padding: 50px;
     }
 
-    #menu
-    {
+    #menu {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    #menu-btn {
+        cursor: pointer;
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .line {
+        background-color: white;
+        height: 2px;
+        margin: 3px 0px;
+        width: 20px;
+        transition: all ease-in-out 0.3s;
+    }
+
+    .short {width: 50%; transition: all ease-in-out 0.3s;} .shorter {width: 25%;}    
+
+    .fechado {
+        position: relative;
+    }
+
+    .fechado .line {
+        margin: 0;
+    }
+
+    .fechado .vanish {
+        opacity: 0;
+    }
+
+    .fechado .shorter {
+        width: 20px;
+        transform: rotate(45deg);
+        transform-origin: 12px;
+    }
+
+    .fechado .rot {
+        transform: rotate(-45deg);
+        transform-origin: 14px;
+    }
+
+    .nav-menu.aberto {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
         text-align: center;
-        padding: 0;
-        margin: 40px 0 0 0;
+        top: 9%;
+        right: 0%;
+        width: 100%;
+        height: 100%;
+    }
+
+    .aberto li {
+        background: #121212;
     }
 
     #contatos
@@ -477,6 +546,7 @@ footer a
     {
         padding: 0;
     }
+
 }
 
 @media screen and (max-width:480px)
