--- a/chuva-challenge/css/style.css
+++ b/chuva-challenge/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 html {
   box-sizing: border-box;
 }
@@ -5,6 +6,83 @@ html {
 body, h1, h2, h3, p {
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  font-size: 2.125rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.375rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p {
+  font-size: 0.875rem;
+}
+
+.menor {
+  font-size: 0.75rem;
+}
+
+.title {
+  font-size: 1.875rem;
+  font-family: roboto;
+  font-weight: 700;
+  color: white;
+}
+
+img {
+  width: 100%;
+}
+
+body {
+  display: grid;
+  grid-template-areas: "nav header" "nav analise aside" "nav resumo" "nav discussoes" "nav footer";
+}
+
+/* Side Menu */
+#side-menu {
+  width: 220px;
+  height: 100%;
+  background: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+#side-menu #title-container {
+  padding: 20px 22px 20px 20px;
+  background: linear-gradient(180deg, #FFB354 0%, #EE7A3A 100%);
+}
+#side-menu #nav-menu {
+  padding: 0;
+}
+#side-menu #nav-menu a {
+  text-decoration: none;
+  color: #000;
+  font-family: "quicksand";
+  font-weight: 500;
+}
+#side-menu .menu-item {
+  list-style: none;
+  padding: 7px 0 7px 24px;
+  border-bottom: 2px solid #E7E7E7;
+}
+#side-menu .menu-item.ativado {
+  background-color: #FDF1EB;
 }
 
 /*# sourceMappingURL=style.css.map */
