--- a/chuva-challenge/sass/style.scss
+++ b/chuva-challenge/sass/style.scss
@@ -1,3 +1,6 @@
+// Import
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 // Reset
 html {
     box-sizing: border-box;
@@ -7,4 +10,65 @@ body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
 }
+
+// Fonte
+h1 {font-size: 2.125rem;}
+h2 {font-size: 1.5rem;}
+h3 {font-size: 1.375rem;}
+h4 {font-size: 1.250rem;}
+h5 {font-size: 1.125rem;}
+h6 {font-size: 1rem;}
+p {font-size: 0.875rem;}
+.menor {font-size: 0.750rem;}
+.title {font-size: 1.875rem; font-family: roboto; font-weight: 700; color: white;}
+
+// Imagem Responsiva
+img {
+    width: 100%;
+}
+
+// Site
+body {
+    display: grid;
+    grid-template-areas: 
+    "nav header"
+    "nav analise aside"
+    "nav resumo"
+    "nav discussoes"
+    "nav footer";
+}
+
+/* Side Menu */
+#side-menu {
+    width: 220px;
+    height: 100%;
+    background: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+
+    #title-container {
+        padding: 20px 22px 20px 20px;
+        background: linear-gradient(180deg, #FFB354 0%, #EE7A3A 100%);
+    }
+
+    #nav-menu {padding: 0;}
+
+    #nav-menu a {
+        text-decoration: none; color: #000; font-family: 'quicksand';
+        font-weight: 500;
+    }
+
+    .menu-item {
+        list-style: none;
+        padding: 7px 0 7px 24px;
+        border-bottom: 2px solid #E7E7E7;
+    }
+
+    .menu-item.ativado {
+        background-color: #FDF1EB;
+    }
+
+
+}
+
+
 
