--- a/chuva-challenge/css/style.css
+++ b/chuva-challenge/css/style.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Economica:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 html {
   box-sizing: border-box;
 }
 
-body, h1, h2, h3, p {
+body, h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
 }
@@ -42,7 +43,7 @@ p {
 
 .title {
   font-size: 1.875rem;
-  font-family: roboto;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   color: white;
 }
@@ -53,7 +54,7 @@ img {
 
 body {
   display: grid;
-  grid-template-areas: "nav header" "nav analise aside" "nav resumo" "nav discussoes" "nav footer";
+  grid-template-columns: 1fr;
 }
 
 /* Side Menu */
@@ -83,6 +84,38 @@ body {
 }
 #side-menu .menu-item.ativado {
   background-color: #FDF1EB;
+}
+
+/* Header */
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 1324px;
+  height: 80px;
+  background-color: #FDF1EB;
+}
+header #texts {
+  margin: 5px 0 5px 36px;
+}
+header #language #language * {
+  display: flex;
+  background-color: white;
+}
+header #language #lang-container {
+  display: flex;
+  flex-direction: row;
+  padding: 4px 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+header #perfil {
+  display: flex;
+}
+header #perfil img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
