--- a/chuva-challenge/css/style.css
+++ b/chuva-challenge/css/style.css
@@ -52,13 +52,9 @@ img {
   width: 100%;
 }
 
-body {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
 /* Side Menu */
 #side-menu {
+  position: fixed;
   width: 220px;
   height: 100%;
   background: #fff;
@@ -91,12 +87,14 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 1324px;
-  height: 80px;
+  justify-content: space-between;
+  padding: 0 36px;
   background-color: #FDF1EB;
 }
 header #texts {
-  margin: 5px 0 5px 36px;
+  margin: 5px 0;
+  font-family: roboto;
+  color: #725C5C;
 }
 header #language #language * {
   display: flex;
@@ -105,9 +103,14 @@ header #language #language * {
 header #language #lang-container {
   display: flex;
   flex-direction: row;
-  padding: 4px 5px;
+  font-family: quicksand;
+  font-weight: 400;
+  padding: 8px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+header #language #lang-container p {
+  padding: 0 5px;
 }
 header #perfil {
   display: flex;
@@ -116,6 +119,150 @@ header #perfil img {
   width: 48px;
   height: 48px;
   border-radius: 50%;
+}
+header #perfil #welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  font-family: quicksand;
+  color: #333333;
+  margin-right: 6px;
+}
+header #perfil #pf-foto {
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+header #perfil #pf-foto p {
+  position: absolute;
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  padding: 1px 4px;
+  font-size: 10px;
+  font-family: quicksand;
+  font-weight: 700;
+  cursor: context-menu;
+}
+
+/* Main Configs */
+main {
+  padding-left: 220px;
+}
+main section {
+  padding: 20px 44px 0;
+}
+
+/* Primeira Section */
+#analise {
+  display: flex;
+}
+
+#video {
+  width: 90%;
+}
+#video #title {
+  color: #ED7839;
+  font-family: roboto;
+  padding-bottom: 20px;
+}
+#video #vid {
+  width: 100%;
+  height: 65vh;
+  position: relative;
+}
+#video #vid img {
+  width: 100%;
+  height: 100%;
+}
+#video #vid .overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  top: 0;
+  position: absolute;
+  background: rgba(141, 53, 6, 0.5);
+}
+#video #titulo {
+  position: absolute;
+  top: 0;
+  z-index: 999;
+  font-family: roboto;
+  color: white;
+  margin: 30px 60px;
+}
+#video #tutora {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  z-index: 999;
+  margin: 60px;
+  font-family: roboto;
+}
+#video #tutora img {
+  width: 75px;
+  border-radius: 50%;
+  border: 1px solid rgb(237, 120, 57);
+  padding: 4px;
+}
+#video #tutora #pessoa {
+  padding: 0 20px;
+  color: white;
+}
+
+#lat {
+  width: 25%;
+  margin: 0 0 0 31px;
+}
+#lat #btn-area {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+#lat #btn-area button {
+  display: flex;
+  align-items: center;
+  background: #ED7839;
+  border-radius: 4px;
+  border: none;
+  height: 31px;
+  margin: 0 0 0 5px;
+  font-family: roboto;
+  font-weight: 500;
+  color: white;
+}
+#lat #btn-area button i {
+  color: white;
+}
+#lat #btn-area button img {
+  width: 19px;
+  height: 19px;
+}
+#lat #how {
+  padding: 12px 0;
+  text-align: end;
+  color: rgb(237, 120, 57);
+  font-family: roboto;
+  font-weight: 500;
+}
+#lat #details .header {
+  background-color: #FDF1EB;
+  padding: 10px 15px;
+  font-family: roboto;
+  font-weight: 500;
+}
+#lat #details #read-content {
+  height: 100%;
+  padding: 15px;
+  height: 100%;
+  border: 1px solid rgb(236, 236, 236);
+}
+#lat #details #read-content p {
+  font-family: quicksand;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
