--- a/chuva-challenge/sass/style.scss
+++ b/chuva-challenge/sass/style.scss
@@ -2,6 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Economica:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+// Variáveis
+$rt: roboto;
+$qs: quicksand;
+$color: #333333;
+
+// Mixin
+@mixin absolute {
+    position: absolute;
+    top: 0;
+    z-index: 999;
+}
+
+@mixin font {
+    font-family: $rt;
+    font-weight: 500;
+}
+
 // Reset
 html {
     box-sizing: border-box;
@@ -29,13 +46,10 @@ img {
 }
 
 // Site
-body {
-    display: grid;
-    grid-template-columns: 1fr;
-}
 
 /* Side Menu */
 #side-menu {
+    position: fixed;
     width: 220px;
     height: 100%;
     background: #fff;
@@ -71,14 +85,18 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 1324px;
-    height: 80px;
+    justify-content: space-between;
+
+    padding: 0 36px;
+    
     background-color: #FDF1EB;
-
+    
     #texts {
-        margin: 5px 0 5px 36px;
+        margin: 5px 0;
+        font-family: $rt;
+        color: #725C5C;
     }
-
+    
     #language {
 
         #language * {
@@ -89,11 +107,16 @@ header {
         #lang-container {
             display: flex;
             flex-direction: row;
-
-            padding: 4px 5px;
+            font-family: $qs;
+            font-weight: 400;
+            padding: 8px;
             
             border: 1px solid rgba(0,0,0,.2);
             border-radius: 4px;
+
+            p {
+                padding: 0 5px;
+            }
         }
         
     }
@@ -107,8 +130,194 @@ header {
             border-radius: 50%;
         }
 
+        #welcome {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+
+            font-family: $qs;
+            color: $color;
+        
+            margin-right: 6px;
+        }
+
+        #pf-foto {
+            display: flex;
+            justify-content: flex-end;
+            cursor: pointer;
+
+            p {
+                position: absolute;
+                background-color: red;
+                border-radius: 50%;
+                color: white;
+                padding: 1px 4px;
+
+                font-size: 10px;
+                font-family: $qs;
+                font-weight: 700;
+
+                cursor: context-menu;
+            }
+        }
+
     }
 
 }
 
+/* Main Configs */
+main {
+    padding-left: 220px;
+
+    section {
+        padding: 20px 44px 0;
+    }
+}
+
+/* Primeira Section */
+#analise {
+    display: flex;
+}
+
+#video {
+    width: 90%;
+    #title{
+        color: #ED7839;
+        font-family: $rt;
+        padding-bottom: 20px;
+    }
+    #vid {
+        width: 100%;
+        height: 65vh;
+        position: relative;
+        
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
+        .overlay {
+            width: 100%;
+            height: 100%;
+            z-index: 999;
+            top: 0;
+            position: absolute;
+            background: rgba(141, 53, 6, 0.5);
+
+        }
+    }
+
+    #titulo {
+        @include absolute();
+
+        font-family: $rt;
+        color: white;
+
+        margin: 30px 60px;
+    }
+
+    #tutora {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        position: absolute;
+        bottom: 0;
+        z-index: 999;
+        
+        margin: 60px;
+
+        font-family: $rt;
+
+        img {
+            width: 75px;
+
+            border-radius: 50%;
+            border: 1px solid rgba(237, 120, 57, 1);
+
+            padding: 4px;
+
+        }
+        
+        #pessoa {
+            padding: 0 20px;
+            color: white;
+        }
+
+    }
+        
+}
+
+#lat {
+    width: 25%;
+    margin: 0 0 0 31px;
+
+    #btn-area {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+    }
+
+    #btn-area button{
+        display: flex;
+        align-items: center;
+
+        background: #ED7839;
+        border-radius: 4px;
+        border: none;
+
+        height: 31px;
+
+        margin: 0 0 0 5px;
+
+        @include font();
+        color: white;
+
+        i {
+            color: white;
+        }
+
+        img {
+            width: 19px;
+            height: 19px;
+        }
+
+    }
+
+    #how {
+        padding: 12px 0;
+        text-align: end;
+
+        color: rgba(237, 120, 57, 1);
+
+        font-family: $rt;
+        font-weight: 500;
+
+    }
+
+    #details {
+        .header {
+            background-color: #FDF1EB;
+            padding: 10px 15px;
+
+            font-family: $rt;
+            font-weight: 500;
+        }
+
+        #read-content {
+            height: 100%;
+            padding: 15px;
+            height: 100%;
+
+            border: 1px solid rgba(236, 236, 236, 1);
+
+            p {
+                font-family: $qs;
+                font-weight: 400;
+            }
+        }
+    }
+}
 
